# zstdpp

./: .gitignore  CMakeLists.txt  README.md  build.sh  zstdpp.hpp
tests/: helpers.hpp  test_compress.cpp  test_compress_buffer.cpp  test_decompress.cpp  test_decompress_buffer.cpp  test_inplace.cpp  test_stream_compress.cpp  test_stream_decompress.cpp
